--- a/charts/sscs-tribunals-api/Chart.yaml
+++ b/charts/sscs-tribunals-api/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: sscs-tribunals-api
 home: https://github.com/hmcts/sscs-tribunals-case-api
-version: 0.0.121
+version: 0.0.120
 description: SSCS Tribunals Case API
 maintainers:
   - name: HMCTS SSCS Team
@@ -9,6 +9,14 @@ dependencies:
   - name: java
     version: 5.0.0
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
+  - name: idam-pr
+    version: 2.3.0
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: idam-pr.enabled
+  - name: xui-webapp
+    version: 1.0.9
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: xui-webapp.enabled
   - name: sscs-evidence-share
     version: 0.0.46
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
@@ -21,6 +29,12 @@ dependencies:
     version: 0.0.31
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: sscs-ccd-callback-orchestrator.enabled
+  - name: ccd
+    version: 8.0.29
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: ccd.enabled
+    tags:
+      - sscs-ccd-idam-pr
   - name: sscs-tribunals-frontend
     version: 0.2.38
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
@@ -41,6 +55,10 @@ dependencies:
     version: 0.0.31
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: sscs-hearings-api.enabled
+  - name: hmc-cft-hearing-service
+    version: 1.6.14
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: hmc-cft-hearing-service.enabled
   - name: servicebus
     version: 1.0.4
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
