--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
     id 'com.gorylenko.gradle-git-properties' version '2.4.1'
     id 'com.github.ben-manes.versions' version '0.46.0'
     id "info.solidsoft.pitest" version '1.9.11'
-    id 'org.owasp.dependencycheck' version '8.3.1'
+    id "org.owasp.dependencycheck" version "9.0.6"
     id 'au.com.dius.pact' version '4.3.15'
     id 'com.github.hmcts.rse-cft-lib' version '0.19.771'
 }
@@ -166,7 +166,7 @@ dependencyCheck {
     failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild', 'true') == 'true' ? 7.0 : 11
     suppressionFile = 'config/owasp/suppressions.xml'
 
-    cveValidForHours = 24
+    nvd.validForHours = 24
 
     analyzers {
         retirejs {
